Fixed issue with bundle --ship command. Updated sample to the latest SPFx version. Fixes #153

--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -11,12 +11,12 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/mgt": "0.1.0-preview.8",
-    "@microsoft/sp-core-library": "1.8.1",
-    "@microsoft/sp-lodash-subset": "1.8.1",
-    "@microsoft/sp-office-ui-fabric-core": "1.8.1",
-    "@microsoft/sp-property-pane": "1.8.1",
-    "@microsoft/sp-webpart-base": "1.8.1",
+    "@microsoft/mgt": "^1.0.0",
+    "@microsoft/sp-core-library": "1.9.1",
+    "@microsoft/sp-lodash-subset": "1.9.1",
+    "@microsoft/sp-office-ui-fabric-core": "1.9.1",
+    "@microsoft/sp-property-pane": "1.9.1",
+    "@microsoft/sp-webpart-base": "1.9.1",
     "@types/es6-promise": "0.0.33",
     "@types/react": "16.4.2",
     "@types/react-dom": "16.0.5",
@@ -29,10 +29,10 @@
   },
   "devDependencies": {
     "@microsoft/rush-stack-compiler-3.3": "0.2.9",
-    "@microsoft/sp-build-web": "1.8.0",
-    "@microsoft/sp-module-interfaces": "1.8.0",
-    "@microsoft/sp-tslint-rules": "1.8.0",
-    "@microsoft/sp-webpart-workbench": "1.8.0",
+    "@microsoft/sp-build-web": "1.9.1",
+    "@microsoft/sp-module-interfaces": "1.9.1",
+    "@microsoft/sp-tslint-rules": "1.9.1",
+    "@microsoft/sp-webpart-workbench": "1.9.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
