Added lint check to npm run build

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
     "setLicense": "gulp setLicense",
-    "build": "run-s prettier:check setVersion clean sass build:esm build:bundle",
+    "build": "run-s prettier:check lint setVersion clean sass build:esm build:bundle",
     "build:esm": "tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
