--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@microsoft/microsoft-graph-types": "^1.10.0",
     "@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
     "adaptivecards": "^1.2.3",
+    "adaptivecards-templating": "^0.1.1-alpha.0",
     "lit-element": "^2.2.1",
     "msal": "1.1.3",
     "office-ui-fabric-core": "10.1.0"
