Add storybook integration to demo components

--- a/package.json
+++ b/package.json
@@ -44,7 +44,15 @@
     "prepack": "npm run build",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\""
+    "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
+    "storybook": "start-storybook -p 6006",
+    "storybook:build": "build-storybook",
+    "storybook:deploy": "storybook-to-ghpages"
+  },
+  "storybook-deployer": {
+    "gitUsername": "@microsoft/mgt",
+    "gitEmail": "noreply@microsoft.com",
+    "commitMessage": "Deploy Storybook [skip ci]"
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^2.0.0",
@@ -61,10 +69,20 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
+    "@storybook/addon-a11y": "^5.3.0-beta.31",
+    "@storybook/addon-actions": "^5.3.0-beta.31",
+    "@storybook/addon-docs": "^5.3.0-beta.31",
+    "@storybook/addon-knobs": "^5.3.0-beta.31",
+    "@storybook/addon-links": "^5.3.0-beta.31",
+    "@storybook/addon-storysource": "^5.3.0-beta.31",
+    "@storybook/storybook-deployer": "^2.8.1",
+    "@storybook/web-components": "^5.3.0-beta.31",
     "@types/jest": "^24.0.11",
     "@webcomponents/webcomponentsjs": "^2.4.0",
+    "babel-loader": "^8.0.6",
     "babel-polyfill": "6.26.0",
     "cpx": "^1.5.0",
+    "es-dev-server": "^1.31.1",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.8",
     "gulp-header-license": "^1.0.9",
@@ -75,7 +93,6 @@
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
-    "es-dev-server": "^1.31.1",
     "prettier": "1.17.0",
     "rollup": "^1.27.10",
     "rollup-plugin-babel": "^4.3.3",
@@ -88,6 +105,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.23.7",
     "shx": "^0.3.2",
+    "storybook-addon-web-components-knobs": "^0.2.2",
     "ts-jest": "^24.0.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
