--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
+    "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@storybook/addon-a11y": "^5.3.0-beta.31",
     "@storybook/addon-actions": "^5.3.0-beta.31",
