--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@storybook/storybook-deployer": "^2.8.1",
     "@storybook/web-components": "^5.3.0-beta.31",
     "@types/jest": "^24.0.11",
+    "@types/node": "12.12.22",
     "@webcomponents/webcomponentsjs": "^2.4.0",
     "babel-loader": "^8.0.6",
     "babel-polyfill": "6.26.0",
