--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@babel/preset-typescript": "^7.7.4",
     "@types/jest": "^24.0.11",
     "@webcomponents/webcomponentsjs": "^2.4.0",
-    "babel-polyfill": "6.26.0",
+    "core-js": "^3.6.1",
     "cpx": "^1.5.0",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.8",
@@ -77,6 +77,7 @@
     "npm-run-all": "^4.1.5",
     "es-dev-server": "^1.31.1",
     "prettier": "1.17.0",
+    "regenerator-runtime": "^0.13.3",
     "rollup": "^1.27.10",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-babel-minify": "^9.1.1",
