disabled bundling on es-dev-server

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "clean": "shx rm -rf dist",
     "start": "npm run sass && run-p sass:watch build:watch serve",
-    "serve": "es-dev-server --port 3000 --node-resolve --open --watch --app-index index.html",
+    "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
@@ -65,6 +65,7 @@
     "@webcomponents/webcomponentsjs": "^2.4.0",
     "core-js": "^3.6.1",
     "cpx": "^1.5.0",
+    "es-dev-server": "^1.31.1",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.8",
     "gulp-header-license": "^1.0.9",
@@ -75,7 +76,6 @@
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "npm-run-all": "^4.1.5",
-    "es-dev-server": "^1.31.1",
     "prettier": "1.17.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.27.10",
