--- a/package.json
+++ b/package.json
@@ -70,14 +70,14 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
-    "@storybook/addon-a11y": "^5.3.0-rc.12",
-    "@storybook/addon-actions": "^5.3.0-rc.12",
-    "@storybook/addon-docs": "^5.3.0-rc.12",
-    "@storybook/addon-knobs": "^5.3.0-rc.12",
-    "@storybook/addon-links": "^5.3.0-rc.12",
-    "@storybook/addon-storysource": "^5.3.0-rc.12",
+    "@storybook/addon-a11y": "^5.3.2",
+    "@storybook/addon-actions": "^5.3.2",
+    "@storybook/addon-docs": "^5.3.2",
+    "@storybook/addon-knobs": "^5.3.2",
+    "@storybook/addon-links": "^5.3.2",
+    "@storybook/addon-storysource": "^5.3.2",
     "@storybook/storybook-deployer": "^2.8.1",
-    "@storybook/web-components": "^5.3.0-rc.12",
+    "@storybook/web-components": "^5.3.2",
     "@types/jest": "^24.0.11",
     "@types/node": "12.12.22",
     "@webcomponents/webcomponentsjs": "^2.4.0",
