--- a/package.json
+++ b/package.json
@@ -94,6 +94,8 @@
     "husky": "^3.1.0",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
+    "monaco-editor": "^0.19.3",
+    "monaco-editor-webpack-plugin": "^1.8.2",
     "npm-run-all": "^4.1.5",
     "prettier": "1.17.0",
     "rollup": "^1.27.10",
