package.json scripts update

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
     "setLicense": "gulp setLicense",
-    "build": "run-s prettier:check lint setVersion clean sass build:esm build:bundle",
-    "build:esm": "tsc",
+    "build": "run-s prettier:check lint setVersion clean build:esm build:bundle",
+    "build:esm": "npm run sass && tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
@@ -45,7 +45,7 @@
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "npm run build:esm && start-storybook -p 6006",
     "storybook:build": "build-storybook && cpx .storybook/CNAME storybook-static",
     "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static"
   },
