--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@types/jest": "^24.9.1",
     "@types/node": "12.12.22",
     "@webcomponents/webcomponentsjs": "^2.4.1",
+    "babel-loader": "^8.0.6",
     "core-js": "^3.6.4",
     "cpx": "^1.5.0",
     "es-dev-server": "^1.36.2",
