--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
-    "storybook": "npm run build:esm && start-storybook -p 6006",
+    "storybook": "npm run build && start-storybook -p 6006",
     "storybook:build": "build-storybook && cpx .storybook/CNAME storybook-static",
     "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static"
   },
