--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
-    "storybook": "npm run build && start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006",
+    "storybook:dev": "npm run build && wca analyze src --format json --outFile custom-elements.json",
     "storybook:build": "build-storybook && cpx .storybook/CNAME storybook-static",
     "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static"
   },
@@ -115,6 +116,7 @@
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5",
+    "web-component-analyzer": "1.0.3",
     "whatwg-fetch": "^3.0.0"
   },
   "jest-junit": {
