--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s assets",
     "storybook:dev": "npm run build && wca analyze src --format json --outFile custom-elements.json",
     "storybook:build": "build-storybook && cpx .storybook/CNAME storybook-static",
     "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static"
