--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-util": "^3.0.8",
     "husky": "^3.1.0",
+    "idb": "^5.0.1",
     "jest": "^24.5.0",
     "jest-junit": "^6.3.0",
     "monaco-editor": "^0.19.3",
