--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "lit-element": "^2.3.1",
-    "msal": "^1.3.0-beta.1",
+    "msal": "^1.3.0",
     "office-ui-fabric-core": "11.0.0"
   },
   "devDependencies": {
