--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -11,7 +11,8 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/mgt": "^1.2.3",
+    "@microsoft/mgt": "^1.3.0-preview.3",
+    "@microsoft/mgt-react": "^1.3.0-preview.3",
     "@microsoft/sp-core-library": "1.10.0",
     "@microsoft/sp-lodash-subset": "1.10.0",
     "@microsoft/sp-office-ui-fabric-core": "1.10.0",
