--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt",
-  "version": "1.3.0-preview.3",
+  "version": "1.3.0",
   "description": "The Microsoft Graph Toolkit",
   "keywords": [
     "microsoft graph",
