update to 1.3 and mgt-react

--- a/samples/react-app/package.json
+++ b/samples/react-app/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-app",
-  "version": "0.1.0",
+  "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "@microsoft/mgt": "0.1.0-preview.8",
+    "@microsoft/mgt": "^1.3.0-preview.3",
+    "@microsoft/mgt-react": "^1.3.0-preview.3",
     "@webcomponents/webcomponentsjs": "2.2.10",
     "react": "^16.8.5",
     "react-app-polyfill": "1.0.1",
