--- a/samples/react-app/package.json
+++ b/samples/react-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
-    "@microsoft/mgt": "^1.3.0-preview.3",
+    "@microsoft/mgt": "^1.3.0",
     "@microsoft/mgt-react": "^1.3.0-preview.3",
     "@webcomponents/webcomponentsjs": "2.2.10",
     "react": "^16.8.5",
