Fixed bad lerna commands in package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "private": true,
     "scripts": {
         "install": "lerna bootstrap",
-        "pack": "lerna run --prefix packages\\mgt pack",
-        "build": "lerna run --prefix packages\\mgt build",
+        "pack": "lerna run pack",
+        "build": "lerna run build",
         "start": "npm run --prefix packages\\mgt start",
         "storybook": "start-storybook -p 6006 -s assets",
         "storybook:dev": "npm run build && wca analyze packages --format json --outFile custom-elements.json",
