--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm run install
+    - run: npm i
+    - run: npm run bootstrap
     - run: npm run pack
     - name: Upload a Build Artifact - package
       uses: actions/upload-artifact@v2
