Moved dev dependencies to root package.json

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
    verbose: false
 
 - task: Npm@1
-  displayName: 'npm run bootstrap'
+  displayName: 'npm run prepare'
   inputs:
    verbose: false
 
