--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: npm run bootstrap
+    - run: npm run prepare
     - run: npm run pack
     - name: Upload a Build Artifact - package
       uses: actions/upload-artifact@v2
