--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: bundle
-        path: dist/bundle
+        path: packages/mgt/dist/bundle
