--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -52,7 +52,8 @@
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "lit-element": "^2.3.1",
     "msal": "^1.3.1",
-    "office-ui-fabric-core": "11.0.0"
+    "office-ui-fabric-core": "11.0.0",
+    "idb": "^5.0.1"
   },
   "jest-junit": {
     "suiteName": "jest tests",
