Updated master to main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ name: Build CI
 
 on:
   push:
-    branches: [ master, release/** ]
+    branches: [ main, release/** ]
   pull_request:
-    branches: [ master, release/** ]
+    branches: [ main, release/** ]
 
 jobs:
   build:
