--- a/samples/sp-webpart/package.json
+++ b/samples/sp-webpart/package.json
@@ -30,6 +30,8 @@
     "@types/react": "16.8.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "@microsoft/rush-stack-compiler-3.7": "0.2.9",
     "@microsoft/sp-build-web": "1.10.0",
     "@microsoft/sp-module-interfaces": "1.10.0",
@@ -38,7 +40,10 @@
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
+    "babel-loader": "^8.1.0",
     "gulp": "~3.9.1",
-    "typescript": "^3.4.3"
+    "regenerator-runtime": "^0.13.5",
+    "typescript": "^3.4.3",
+    "webpack": "^4.43.0"
   }
 }
