--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -34,7 +34,7 @@
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
     "setLicense": "gulp setLicense",
-    "build": "run-s prettier:check lint setVersion clean build:esm build:bundle",
+    "build": "run-s lint setVersion clean build:esm build:bundle",
     "build:esm": "npm run sass && tsc",
     "build:watch": "tsc --watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
@@ -43,19 +43,8 @@
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepack": "npm run build",
-    "prettier:base": "prettier --parser typescript",
-    "prettier:check": "npm run prettier:base -- --list-different \"{src,tests}/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"{src,tests}/**/*.{ts,tsx}\"",
-    "storybook": "start-storybook -p 6006 -s assets",
-    "storybook:dev": "npm run build && wca analyze src --format json --outFile custom-elements.json",
-    "storybook:build": "build-storybook -s assets && cpx .storybook/CNAME storybook-static",
-    "storybook:deploy": "npm run storybook:build && storybook-to-ghpages -e storybook-static"
-  },
-  "storybook-deployer": {
-    "gitUsername": "@microsoft/mgt",
-    "gitEmail": "noreply@microsoft.com",
-    "commitMessage": "Deploy Storybook [skip ci]"
+    "pack": "npm pack",
+    "prepack": "npm run build"
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^2.0.0",
@@ -65,62 +54,6 @@
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
-    "@babel/preset-typescript": "^7.9.0",
-    "@storybook/addon-a11y": "^5.3.17",
-    "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
-    "@storybook/addon-links": "^5.3.17",
-    "@storybook/addon-storysource": "^5.3.17",
-    "@storybook/storybook-deployer": "^2.8.5",
-    "@storybook/web-components": "^5.3.17",
-    "@types/jest": "^24.9.1",
-    "@types/node": "12.12.22",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
-    "babel-loader": "^8.1.0",
-    "core-js": "^3.6.4",
-    "cpx": "^1.5.0",
-    "es-dev-server": "^1.45.3",
-    "gulp": "^4.0.2",
-    "gulp-append-prepend": "^1.0.8",
-    "gulp-header-license": "^1.0.9",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-util": "^3.0.8",
-    "husky": "^3.1.0",
-    "jest": "^24.5.0",
-    "jest-junit": "^6.3.0",
-    "monaco-editor": "^0.19.3",
-    "monaco-editor-webpack-plugin": "^1.8.2",
-    "npm-run-all": "^4.1.5",
-    "prettier": "1.17.0",
-    "regenerator-runtime": "^0.13.5",
-    "rollup": "^1.29.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-babel-minify": "^9.1.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.5.0",
-    "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
-    "sass": "^1.26.3",
-    "shx": "^0.3.2",
-    "storybook-addon-web-components-knobs": "^0.2.7",
-    "ts-jest": "^24.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.5",
-    "web-component-analyzer": "1.0.3",
-    "whatwg-fetch": "^3.0.0"
-  },
   "jest-junit": {
     "suiteName": "jest tests",
     "output": "testResults/junit.xml",
@@ -128,14 +61,5 @@
     "titleTemplate": "{classname} - {title}",
     "ancestorSeparator": " > ",
     "usePathForSuiteName": "true"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run prettier:check"
-    }
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true
   }
 }
