--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -50,6 +50,7 @@
     "@microsoft/microsoft-graph-client": "^2.0.0",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
+    "@open-wc/scoped-elements": "^1.1.1",
     "lit-element": "^2.3.1",
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
