--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt-react",
-  "version": "1.3.0-preview.3",
+  "version": "1.3.0",
   "description": "Microsoft Graph Toolkit React wrapper class",
   "author": "Microsoft",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@microsoft/mgt": "^1.3.0-preview.3",
+    "@microsoft/mgt": "^1.3.0",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "wc-react": "^0.3.1"
