--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -27,7 +27,7 @@
     "build": "npm run clean && npm run generate && tsc",
     "clean": "node ./scripts/clean.js",
     "prepack": "npm run build",
-    "generate": "wca analyze ../../src --format json --outFile temp/web-components.json && node ./scripts/generate.js"
+    "generate": "wca analyze ../mgt/src --format json --outFile temp/web-components.json && node ./scripts/generate.js"
   },
   "devDependencies": {
     "@types/react": "^16.9.32",
@@ -43,7 +43,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@microsoft/mgt": "^1.3.0",
+    "@microsoft/mgt": "1.3.3",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "wc-react": "^0.3.1"
