--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -51,6 +51,7 @@
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "lit-element": "^2.3.1",
+    "@microsoft/mgt-element": "^1.0.0",
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
   },
@@ -61,5 +62,8 @@
     "titleTemplate": "{classname} - {title}",
     "ancestorSeparator": " > ",
     "usePathForSuiteName": "true"
+  },
+  "publishConfig": {
+    "directory": "dist"
   }
 }
