Updated npm scripts

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
     "prepare": "lerna bootstrap --force-local",
     "link": "lerna link --force-local",
     "pack": "lerna run pack",
-    "build": "npm run prettier:check && lerna run build",
-    "start": "npm run --prefix packages/mgt start",
+    "clean": "learna run clean",
+    "build": "npm run prettier:check && lerna run --parallel --no-bail run build",
+    "build:watch": "npm run prettier:check && lerna run --parallel --no-bail build:watch",
+    "start": "npm run prettier:check && npm-run-all -p build:watch serve",
+    "start:https": "npm run prettier:check && npm-run-all -p build:watch serve:https",
+    "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
+    "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
