--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -26,17 +26,15 @@
   ],
   "scripts": {
     "clean": "shx rm -rf dist",
-    "start": "npm run sass && run-p sass:watch build:watch serve",
-    "start:https": "npm run sass && run-p sass:watch build:watch serve:https",
-    "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
-    "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
     "setLicense": "gulp setLicense",
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
     "build": "run-s lint setVersion clean build:esm build:bundle",
-    "build:esm": "npm run sass && tsc",
-    "build:watch": "tsc --watch",
+    "build:esm": "npm run sass && npm run tsc",
+    "build:watch": "npm run sass && npm-run-all -p sass:watch tsc:watch",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
