Updated package scripts to support multi package model

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,4 @@
 {
-  "packages": ["packages/mgt", "packages/mgt-element"],
+  "packages": ["packages/mgt-element", "packages/mgt"],
   "version": "independent"
 }
