--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "root",
   "scripts": {
-    "prepare": "lerna bootstrap --force-local",
+    "clean": "lerna run --parallel --stream clean",
     "link": "lerna link --force-local",
-    "pack": "lerna run pack",
-    "clean": "learna run clean",
-    "build": "npm run prettier:check && lerna run --parallel --no-bail run build",
-    "build:watch": "npm run prettier:check && lerna run --parallel --no-bail build:watch",
-    "start": "npm run prettier:check && npm-run-all -p build:watch serve",
-    "start:https": "npm run prettier:check && npm-run-all -p build:watch serve:https",
+    "pack": "lerna run --parallel --stream pack",
+    "prepare": "lerna bootstrap --force-local",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
+    "start": "npm-run-all prettier:check build watch:serve",
+    "start:https": "npm-run-all prettier:check build watch:serve:https",
+    "watch": "lerna run --parallel --stream watch",
+    "watch:serve": "npm-run-all -p watch serve",
+    "watch:serve:https": "npm-run-all -p watch serve:https",
+    "build": "npm run prettier:check && lerna run --stream build",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
