--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -25,24 +25,23 @@
     "src"
   ],
   "scripts": {
+    "build": "run-s lint setVersion clean tsc build:bundle",
+    "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "clean": "shx rm -rf dist",
+    "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
+    "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "pack": "npm pack",
+    "prepack": "npm run build",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
     "setLicense": "gulp setLicense",
-    "tsc": "tsc",
-    "tsc:watch": "tsc --watch",
-    "build": "run-s lint setVersion clean build:esm build:bundle",
-    "build:esm": "npm run sass && npm run tsc",
-    "build:watch": "npm run sass && npm-run-all -p sass:watch tsc:watch",
-    "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
-    "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "pack": "npm pack",
-    "prepack": "npm run build"
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch",
+    "watch": "npm-run-all -p sass:watch tsc:watch"
   },
   "dependencies": {
     "@microsoft/microsoft-graph-client": "^2.0.0",
