--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -25,13 +25,13 @@
     "src"
   ],
   "scripts": {
-    "build": "run-s lint setVersion clean tsc build:bundle",
+    "build": "run-s lint setVersion clean build:esm build:bundle",
+    "build:esm": "npm run sass && npm run tsc",
     "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
     "clean": "shx rm -rf dist",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "pack": "npm pack",
     "prepack": "npm run build",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
@@ -48,7 +48,7 @@
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "lit-element": "^2.3.1",
-    "@microsoft/mgt-element": "^1.0.0",
+    "@microsoft/mgt-element": "1.0.0",
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
   },
