--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "scripts": {
     "clean": "lerna run --parallel --stream clean",
     "link": "lerna link --force-local",
+    "lint": "lerna run --parallel --stream lint",
     "pack": "lerna exec --stream -- npm pack",
     "prepare": "lerna bootstrap --force-local",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
-    "start": "npm-run-all prettier:check build watch:serve",
-    "start:https": "npm-run-all prettier:check build watch:serve:https",
+    "start": "npm-run-all prettier:check build:esm watch:serve",
+    "start:https": "npm-run-all prettier:check build:esm watch:serve:https",
     "watch": "lerna run --parallel --stream watch",
     "watch:serve": "npm-run-all -p watch serve",
     "watch:serve:https": "npm-run-all -p watch serve:https",
     "build": "npm run prettier:check && lerna run --stream build",
+    "build:esm": "npm run prettier:check && lerna run --stream build:esm",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
@@ -78,10 +80,7 @@
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
     "sass": "^1.26.3",
-    "shx": "^0.3.2",
     "ts-jest": "^24.3.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5",
     "web-component-analyzer": "1.0.3",
     "whatwg-fetch": "^3.0.0"
