--- a/packages/mgt-element/tsconfig.json
+++ b/packages/mgt-element/tsconfig.json
@@ -1,17 +1,8 @@
 {
+  "extends": "../../config/tsconfig",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "lib": ["dom", "es2015"],
-    "module": "es6",
-    "moduleResolution": "node",
-    "target": "es2015",
     "outDir": "dist",
-    "declaration": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
     "rootDir": "src"
   },
-  "exclude": ["node_modules"],
   "include": ["src"]
 }
