--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -26,13 +26,14 @@
   ],
   "scripts": {
     "build": "npm-run-all setVersion clean build:esm build:bundle",
-    "build:esm": "npm run sass && npm run tsc",
-    "build:bundle": "npm run copy:loader && npm run copy:wc && npm run sass && rollup -c",
+    "build:esm": "npm-run-all sass tsc",
+    "build:bundle": "npm-run-all copy:loader copy:wc sass rollup",
     "clean": "shx rm -rf dist",
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
-    "lint": "tslint -c ../../tslint.json 'src/**/*.ts'",
+    "lint": "tslint -c ../../config/tslint.json 'src/**/*.ts'",
     "prepack": "npm run build",
+    "rollup": "rollup -c",
     "sass": "gulp sass",
     "sass:watch": "gulp watchSass",
     "setVersion": "gulp setVersion",
@@ -53,11 +54,28 @@
     "office-ui-fabric-core": "11.0.0"
   },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "cpx": "^1.5.0",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.8",
+    "gulp-header-license": "^1.0.9",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-util": "^3.0.8",
     "npm-run-all": "^4.1.5",
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel-minify": "^9.1.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "shx": "^0.3.2",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.5",
-    "shx": "^0.3.2"
+    "typescript": "^3.7.5"
   },
   "jest-junit": {
     "suiteName": "jest tests",
