--- a/packages/mgt/tsconfig.bundle.json
+++ b/packages/mgt/tsconfig.bundle.json
@@ -1,24 +1,7 @@
 {
+  "extends": "./tsconfig",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
-    "module": "esnext",
-    "moduleResolution": "node",
-    "target": "es2015",
-    "outDir": "dist/es6",
-    "declaration": true,
-    "esModuleInterop": true,
-    "sourceMap": true,
-    "rootDir": "src"
+    "module": "esnext"
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
