Fixed debugging with sourcemaps

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "lerna bootstrap --force-local",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
-    "start": "npm-run-all prettier:check build:esm watch:serve",
+    "start": "npm-run-all prettier:check watch:serve",
     "start:https": "npm-run-all prettier:check build:esm watch:serve:https",
     "watch": "lerna run --parallel --stream watch",
     "watch:serve": "npm-run-all -p watch serve",
