--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -8,7 +8,8 @@
     "target": "es2015",
     "declaration": true,
     "esModuleInterop": true,
-    "sourceMap": true
+    "inlineSourceMap": true,
+    "inlineSources": true
   },
   "exclude": ["node_modules"]
 }
