Split out additional mgt package and update the build scripts (#574)
* Split out mgt-element POC

* Updated npm scripts

* Updated package scripts to support multi package model

* Added license to index.ts file

* More updates to package scripts

* fixed paths in few samples

* PR updates

* Shared common config across packages

* Fixed debugging with sourcemaps

* Removed tsconfig.bundle.json

* Added tsconfig.dev.json

Co-authored-by: Nikola Metulev <nikolame@microsoft.com>

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -2,23 +2,13 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2015"
-    ],
-    "module": "esnext",
+    "lib": ["dom", "es2015"],
+    "module": "es6",
     "moduleResolution": "node",
     "target": "es2015",
-    "outDir": "dist/es6",
     "declaration": true,
     "esModuleInterop": true,
-    "sourceMap": true,
-    "rootDir": "src"
+    "sourceMap": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "src"
-  ]
+  "exclude": ["node_modules"]
 }
