--- a/packages/mgt-element/tsconfig.json
+++ b/packages/mgt-element/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "extends": "../../config/tsconfig",
   "compilerOptions": {
-    "outDir": "dist/es6",
+    "outDir": "dist",
     "rootDir": "src"
   },
-  "exclude": ["node_modules", "src/bundle"],
   "include": ["src/**/*"]
 }
