--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -32,7 +32,7 @@
     "copy:loader": "cpx src/bundle/mgt-loader.js dist/bundle",
     "copy:wc": "cpx node_modules/@webcomponents/webcomponentsjs/bundles/**/* dist/bundle/wc/bundles && cpx node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js dist/bundle/wc",
     "lint": "tslint -c ../../config/tslint.json 'src/**/*.ts'",
-    "prepack": "npm run build",
+    "prepack": "shx rm -rf *.tgz && npm run build",
     "postpack": "cpx *.tgz ../../artifacts",
     "rollup": "rollup -c",
     "sass": "gulp sass",
