--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "clean": "lerna run --parallel --stream clean",
     "link": "lerna link --force-local",
     "lint": "lerna run --parallel --stream lint",
-    "pack": "lerna exec --stream -- npm pack",
+    "pack": "shx rm -rf artifacts/*.tgz && lerna exec --stream -- npm pack",
     "prepare": "lerna bootstrap --force-local",
     "serve": "es-dev-server --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
     "serve:https": "es-dev-server --http2 --port 3000 --node-resolve --open --watch --compatibility none --app-index index.html",
@@ -64,6 +64,7 @@
     "prettier": "1.17.0",
     "regenerator-runtime": "^0.13.5",
     "sass": "^1.26.3",
+    "shx": "^0.3.2",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.5",
     "web-component-analyzer": "1.0.3",
