--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -52,7 +52,8 @@
     "lit-element": "^2.3.1",
     "@microsoft/mgt-element": "*",
     "msal": "^1.3.2",
-    "office-ui-fabric-core": "11.0.0"
+    "office-ui-fabric-core": "11.0.0",
+    "idb": "^5.0.1"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.4.3",
