--- a/packages/mgt/package.json
+++ b/packages/mgt/package.json
@@ -54,6 +54,30 @@
     "msal": "^1.3.2",
     "office-ui-fabric-core": "11.0.0"
   },
+  "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "cpx": "^1.5.0",
+    "gulp": "^4.0.2",
+    "gulp-append-prepend": "^1.0.8",
+    "gulp-header-license": "^1.0.9",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-util": "^3.0.8",
+    "npm-run-all": "^4.1.5",
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel-minify": "^9.1.1",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.5.0",
+    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "shx": "^0.3.2",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.5"
+  },
   "jest-junit": {
     "suiteName": "jest tests",
     "output": "testResults/junit.xml",
