--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,6 @@
 {
-  "packages": ["packages/**/*"],
+  "packages": ["packages/*"],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
   "version": "independent"
 }
