--- a/packages/mgt-element/package.json
+++ b/packages/mgt-element/package.json
@@ -4,19 +4,20 @@
   "description": "Microsoft Graph Toolkit base classes",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
   "files": [
     "dist",
     "src"
   ],
   "scripts": {
-    "build": "npm-run-all clean build:esm",
-    "build:esm": "tsc",
-    "clean": "shx rm -rf dist",
-    "lint": "tslint -c ../../config/tslint.json 'src/**/*.ts'",
-    "prepack": "shx rm -rf *.tgz && npm run build",
+    "build": "npm run clean && npm run build:compile",
+    "build:compile": "npm run compile",
+    "build:watch": "npm run compile:watch",
+    "clean": "shx rm -rf ./dist && shx rm -rf ./tsconfig.tsbuildinfo",
+    "compile": "tsc -b",
+    "compile:watch": "tsc -w",
+    "lint": "tslint -c ../../tslint.json 'src/**/*.ts'",
     "postpack": "cpx *.tgz ../../artifacts",
-    "watch": "tsc --watch"
+    "prepack": "shx rm -rf *.tgz && npm run build"
   },
   "author": "Microsoft",
   "license": "MIT",
@@ -24,14 +25,9 @@
     "@microsoft/microsoft-graph-client": "^2.0.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
     "cpx": "^1.5.0",
     "shx": "^0.3.2",
     "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5"
-  },
-  "publishConfig": {
-    "directory": "dist"
   }
 }
