--- a/packages/mgt-element/tsconfig.json
+++ b/packages/mgt-element/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "extends": "../../config/tsconfig",
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "./"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
