--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   ],
   "scripts": {
     "build": "npm-run-all prettier:check clean build:mgt-element build:mgt",
-    "build:mgt": "lerna exec --stream --scope mgt -- npm run build",
-    "build:mgt-element": "lerna exec --stream --scope mgt-element -- npm run build",
+    "build:mgt": "cd ./packages/mgt && npm run build",
+    "build:mgt-element": "cd ./packages/mgt-element && npm run build",
+    "bundle": "cd ./packages/mgt && npm run bundle",
     "bootstrap": "lerna bootstrap --useWorkspaces",
     "clean": "lerna run --parallel --stream clean",
     "link": "lerna link --force-local",
