--- a/packages/mgt-react/package.json
+++ b/packages/mgt-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/mgt-react",
-  "version": "1.3.0",
+  "version": "1.4.0-preview.1",
   "description": "Microsoft Graph Toolkit React wrapper class",
   "author": "Microsoft",
   "license": "MIT",
@@ -35,15 +35,11 @@
     "fs-extra": "^9.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.8.3",
-    "web-component-analyzer": "^1.0.3"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true
+    "typescript": "^3.7.5",
+    "web-component-analyzer": "^1.1.6"
   },
   "dependencies": {
-    "@microsoft/mgt": "1.3.3",
+    "@microsoft/mgt": "*",
     "@microsoft/microsoft-graph-types": "^1.12.0",
     "@microsoft/microsoft-graph-types-beta": "github:microsoftgraph/msgraph-typescript-typings#beta",
     "wc-react": "^0.3.1"
